--- a/resources/css/backend.css
+++ b/resources/css/backend.css
@@ -32,3 +32,34 @@
         max-width: 25%;
     }
 }
+
+.image-grid-column-3 {
+    flex: 100%;
+    max-width: 100%;
+}
+.image-grid-column-3 .image-grid {
+    position: relative;
+    vertical-align: middle;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    width: calc(100% - 40px);
+}
+.image-grid-column-3 .image-grid img {
+    width: 100%;
+}
+.image-grid.selected {
+    background-color: #0069d9;
+}
+@media (min-width: 768px) {
+    .image-grid-column-3 {
+        flex: 66.6%;
+        max-width: 66.6%;
+    }
+}
+@media (min-width: 1200px) {
+    .image-grid-column-3 {
+        flex: 33.3%;
+        max-width: 33.3%;
+    }
+}
