--- a/resources/css/backend.css
+++ b/resources/css/backend.css
@@ -1,5 +1,9 @@
-/** IMAGE GRID **/
+.category {
+    font-weight: 600;
+    font-size: 1.1em;
+}
 
+/** IMAGE GRID **/
 .image-grid-column {
     flex: 100%;
     max-width: 100%;
@@ -152,4 +156,14 @@
     /*-moz-border-radius: 6px;*/
     /*border-radius: 6px;*/
     padding: 6px;
+}
+
+.chart-binary .ct-series-b .ct-slice-pie {
+    fill: #00CC00;
+}
+.chart-binary .ct-series-a .ct-slice-pie {
+    fill: #d33333;
+}
+.pie-container {
+    padding: 2em;
 }
