Removed Formelement::get_html() for Formelement::get_data(), the returns an array to be parsed by a view. It is implemented in all Formelements, while the formelements/html view parses the data

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -346,7 +346,7 @@ button[disabled] {
     transition: width 1.5s cubic-bezier(0.785, 0.135, 0.15, 0.86);;
 }
 
-.formelement input, .formelement textarea, .formelement .starrating {
+.formelement input:not([type=radio]):not(   [type=checkbox]), .formelement textarea, .formelement .starrating {
     width: 100%;
 }
 
