--- a/resources/css/start.css
+++ b/resources/css/start.css
@@ -113,3 +113,18 @@ body {
 ::-moz-input-placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
+.icons {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 2.7em;
+    z-index: 100;
+    color: black;
+}
+.icons > * {
+    padding: .5em;
+}
+.icons > *:hover {
+    color: whitesmoke;
+    background-color: black;
+}
