--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,8 +75,28 @@ a:focus {
     width: 400px;
 }
 
+#dismiss {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    background: #7386D5;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#dismiss:hover {
+    background: #fff;
+    color: #7386D5;
+}
+
 #sidebar.wide.active {
-    margin-left: -400px;
+    margin-left: 0;
 }
 
 #sidebar .sidebar-header {
@@ -88,22 +108,9 @@ a:focus {
     margin: 20px;
 }
 
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
 #sidebarCollapse {
     font-size: 1em;
     margin-top: 0.6rem;
-    cursor: pointer;
 }
 
 /* ---------------------------------------------------
