--- a/resources/css/backend.css
+++ b/resources/css/backend.css
@@ -3,6 +3,10 @@
     font-size: 1.1em;
 }
 
+.overview span {
+    font-weight: 600;
+}
+
 /** IMAGE GRID **/
 .image-grid-column {
     flex: 100%;
