--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -410,6 +410,9 @@ button[disabled] {
 .form-check-label.check_after {
     margin-left: 1.2rem;
 }
+.radio_input {
+    margin-left: 2rem;
+}
 
 /* ---------------------------------------------------
     FINISHED
